worker-scripts/nerdapp-work-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nerdapp-work-gateway
  namespace: nerdapp-work
spec:
  gatewayClassName: traefik
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: web
      port: 8000
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: websecure
      port: 8443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: nerdapp-work-tls
        mode: Terminate
